# GeneGPT-Tool-use-in-LLMs

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  download_geneturing.sh  pyproject.toml  requirements.txt  scripts.txt  try.py
data/: genehop_small.json  geneturing_small.json
results/: genehop_azure_gpt41_mini_tools.json  genehop_azure_gpt41_tools.json  genehop_small_azure_gpt41_tools.json  geneturing_azure_gpt41_mini_tools.json  geneturing_azure_gpt41_no_tools.json  geneturing_azure_gpt41_tools.json  geneturing_small_azure_gpt41_no_tools.json  geneturing_small_azure_gpt41_tools.json  geneturing_small_ollama_qwen3_4b_tools.json  geneturing_small_qwen3.json  output.json  results.json
scripts/: genehop_azure_gpt41_mini_no_tools.sh  genehop_azure_gpt41_mini_tools.sh  genehop_azure_gpt41_no_tools.sh  genehop_azure_gpt41_tools.sh  genehop_ollama_qwen3_4b_no_tools.sh  genehop_ollama_qwen3_4b_tools.sh  genehop_small_azure_gpt41_mini_no_tools.sh  genehop_small_azure_gpt41_mini_tools.sh  genehop_small_azure_gpt41_no_tools.sh  genehop_small_azure_gpt41_tools.sh  genehop_small_ollama_qwen3_4b_no_tools.sh  genehop_small_ollama_qwen3_4b_tools.sh  geneturing_azure_gpt41_mini_no_tools.sh  geneturing_azure_gpt41_mini_tools.sh  geneturing_azure_gpt41_no_tools.sh  geneturing_azure_gpt41_tools.sh  geneturing_ollama_qwen3_4b_no_tools.sh  geneturing_ollama_qwen3_4b_tools.sh  geneturing_small_azure_gpt41_mini_no_tools.sh  geneturing_small_azure_gpt41_no_tools.sh  geneturing_small_azure_gpt41_tools.sh  geneturing_small_gpt41-mini.sh  geneturing_small_qwen3.sh  (+2 more)
(+11 files in other folders)
